--- a/Journals.App/Journals.App.iOS/Journals.App.iOS.csproj
+++ b/Journals.App/Journals.App.iOS/Journals.App.iOS.csproj
@@ -141,6 +141,9 @@
       <Name>Journals.App</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\styles.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
